# async-scraptt

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scraptt/: settings.py
scraptt/config/: __init__.py
scraptt/configs/: __init__.py  ckip.py  configs.py  urls.py
scraptt/items/: __init__.py  board.py  post.py
scraptt/middlewares/: __init__.py  default.py  pyquery.py
scraptt/models/: ckip.py
scraptt/pipelines/: __init__.py  ckip.py  json.py
scraptt/pipelines/base/: base.py
scraptt/pipelines/utils/: __init__.py  path.py
scraptt/pipelines/utils/ckip/tei_converter/: converter.py
scraptt/pipelines/utils/path/: __init__.py  path.py
scraptt/spiders/: __init__.py  posts.py
scraptt/spiders/base/: __init__.py  posts.py  spider.py
scraptt/spiders/base/utils/: __init__.py  title_tag.py
scraptt/spiders/base/utils/parsers/: __init__.py  index.py  latest_index.py  year_range_index.py
scraptt/spiders/utils/io/: __init__.py  async_io.py  io.py
scraptt/spiders/utils/parsers/comment/: __init__.py  comment.py  counter.py
scraptt/spiders/utils/parsers/content/: __init__.py  content.py  html_stripper.py
scraptt/spiders/utils/parsers/html/: base.py  latest_index.py  utils.py
scraptt/spiders/utils/parsers/posts/: __init__.py  post_data.py
scraptt/spiders/utils/request/: __init__.py  request.py
scraptt/spiders/utils/requests/: base.py  requests.py
scraptt/spiders/utils/segmenter/: ckip_transformer.py
scraptt/spiders/utils/tei_converter/: mandarin_extractor.py
(+8 files in other folders)
