[tool.poetry]
name = "async-scraptt"
version = "1.0.0"
description = "A Python web scraper for extracting post content and comments from PTT website"
authors = ["Retr0327"]
readme = "README.md"
packages = [{include = "scraptt"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"
ckip2tei = "^1.0.1"
pyquery = "^2.0.0"
pydantic = "^1.10.6"
scrapy-fake-useragent = "^1.4.4"
scrapy-user-agents = "^0.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.1.1"
pylint = "^2.17.0"
vulture = "^2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
min_confidence = 80
paths = ["scraptt"]
sort_by_size = true
ignore_names = ["request*", "spider*"]

[tool.isort]
profile = "black"
combine_as_imports = true
force_grid_wrap = 2
force_sort_within_sections = true
